--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,6 @@ env:
   # processed by this workflow.
   release_module_url: "https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/system.zip"
 
-
 on:
   # Only run this workflow when a release is published.
   # To modify this workflow when other events occur, see:
@@ -60,7 +59,6 @@ on:
   release:
     types: [published]
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -70,7 +68,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
 
       # Extract version embedded in the tag.
       # This step expects the tag to be one of the following formats:
@@ -83,7 +80,6 @@ jobs:
         id: get_version
         uses: battila7/get-version-action@v2
 
-
       # Modify "module.json" with values specific to the release.
       # Since the values for the "version" and "url" keys aren't known ahead of
       # time, the manifest file in the repository is updated with these values.
@@ -94,13 +90,22 @@ jobs:
         id: sub_manifest_link_version
         uses: cschleiden/replace-tokens@v1
         with:
-          files: 'system.json'
+          files: "system.json"
         env:
           VERSION: ${{steps.get_version.outputs.version-without-v}}
           URL: ${{ env.project_url }}
           MANIFEST: ${{ env.latest_manifest_url }}
-          DOWNLOAD: ${{ env.release_module_url }}    
-          
+          DOWNLOAD: ${{ env.release_module_url }}
+
+      # `npm ci` is recommended:
+      # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+      - name: Install Dependencies
+        run: npm ci
+
+      # Pull YAML to LDB packs
+      - name: Build Packs
+        run: npm run YMLtoLDB
+
       # Create a "system.zip" archive containing all the module's required files.
       # If you have other directories or files that will need to be added to
       # your packaged module, add them here.
@@ -120,10 +125,11 @@ jobs:
             CHANGELOG.md                         \
             LICENSE                              \
             assets/                              \
-            css/                                 \ 
+            css/                                 \
             fonts/                               \
-            lang/                                \           
+            lang/                                \
             module/                              \
+            packs/                               \
             templates/                           
           # Don't forget to add a backslash at the end of the line for any
           # additional files or directories!
@@ -138,9 +144,6 @@ jobs:
           draft: ${{ github.event.release.unpublished }}
           prerelease: ${{ github.event.release.prerelease }}
           token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: './system.json, ./system.zip'
+          artifacts: "./system.json, ./system.zip"
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
-
-  
-      
