--- a/src/packs/kit-pretires/eminence_C_liana_9TzFxf3eoJsMytFw.yml
+++ b/src/packs/kit-pretires/eminence_C_liana_9TzFxf3eoJsMytFw.yml
@@ -81,7 +81,7 @@ prototypeToken:
   width: 1
   height: 1
   texture:
-    src: systems/penombre/assets/portraits/celiana.webp
+    src: systems/penombre/assets/tokens/celiana_token.webp
     anchorX: 0.5
     anchorY: 0.5
     offsetX: 0
@@ -435,8 +435,8 @@ _stats:
   systemId: penombre
   systemVersion: '0'
   createdTime: 1757150754023
-  modifiedTime: 1759053022021
-  lastModifiedBy: ZPVZnAUjZn9mQP2q
+  modifiedTime: 1759088560441
+  lastModifiedBy: 6qbNUhuoJ67e6dmf
 _id: 9TzFxf3eoJsMytFw
 sort: 300000
 ownership:
