--- a/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
+++ b/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
@@ -18,14 +18,46 @@ pages:
         src="systems/penombre/assets/guide/fiche_mode_jouer.webp" alt="Fiche"
         /><p>Un dialogue de lancer fera alors son apparition.</p><img
         src="systems/penombre/assets/guide/fiche_jet.webp" alt="Dialogue de
-        lancer" /><h2>Si vous utilisez des atouts</h2><p>Cliquez sur les atouts
-        applicables.</p><p>Si vous avec cliqué sur des atouts, pensez à répartir
-        les éventuels jetons de réserves nécessaires et dépensés entre votre
-        conscience et la réserve collégiale (zone "Dépense
-        automatique").</p><p>Si le total des jetons dépensés ici n'est pas égal
-        au nombre des "Jetons à dépenser", vous ne pourrez pas lancer les
-        dés.</p><h2>Si vous lancez une action collégiale</h2><p>Pensez à faire
-        de même.</p>
+        lancer" /><p></p><p>La visibilité du jet reprend par défaut celle choisi
+        dans les options du tchat.</p><p>Le calcul du coût en jetons est
+        automatique en fonction des choix.</p><p>La case <strong>Bonus
+        total</strong> permet de voir la somme des niveaux des atouts
+        sélectionnés.</p><p>Le champ <strong>Bonus</strong> dans la partie
+        Formule permet de saisir un bonus sous la forme 1d20 ou xd6.<br
+        /></p><h2>Si vous utilisez des atouts</h2><p>Cliquez sur les atouts
+        applicables.</p><p>Si vous avez cliqué sur des atouts, pensez à répartir
+        l'éventuelle dépense en jetons entre votre conscience et la réserve
+        collégiale (zone "Dépense automatique").</p><p>Si le total des jetons
+        dépensés ici n'est pas égal au nombre des "Jetons à dépenser", vous ne
+        pourrez pas lancer les dés.</p><p>Le maximum de chaque source de jetons
+        correspond au nombre de jetons disponibles lorsque la fenêtre de
+        dialogue s'est ouverte.</p><p>Lorsque vous déplacez le sélecteur de la
+        Réserve collégiale, un message d'avertissement apparait si le nombre
+        réel de jetons est inférieur à celui que vous avez choisi.</p><p>Si
+        c'est une action normale, le premier atout est gratuit.</p><p>Si c'est
+        une action collégiale, le premier atout n'est pas gratuit, sauf si vous
+        cochez la case "J'ai choisi le premier atout …"</p><h2>Si vous lancez
+        une action collégiale</h2><p>La première étape est la même que pour une
+        action normale.</p><p>Par contre le résultat n'est pas affiché dans le
+        message de tchat avant que l'action soit finalisée.</p><p>Tous les
+        joueurs connectés, à l'exception du MJ, vont voir dans le message de
+        tchat deux boutons : Participer et Ne pas participer.</p><p>SI un joueur
+        participe, une fenêtre de dialogue apparait pour lui permettre de
+        réaliser son jet de dés. Si un joueur ne participe pas, il doit cliquer
+        sur le bouton pour que le jet collégiale aiile jusqu'au
+        bout.</p><p>Lorsque tous les joueurs auront fait leur choix, le message
+        initial sera mis à jour avec les succès de tout le monde, et le résultat
+        sera visible. A noter que dans Autres succès, une info-bulle sur le
+        nombre de succès permet de connaitre le personnage à
+        l'origine.</p><p>Tous les participants peuvent choisir de relancer tout
+        ou une partie de leurs dés.</p><p>Comme le lancer est visible au moment
+        où le joueur lance les dés, il est fortement conseillé de discuter tous
+        ensemble avant que chacun commence à cliquer sur le bouton Lancer les
+        dés.</p><h2>Relance</h2><p>Pour chaque jet de dé, il est possible de
+        faire une et une seule relance. Les boutons de relance sont visibles
+        dans le tchat en fonction des réserves non vide.</p><p>Il suffit de
+        sélectionner les dés à relancer et de cliquer sur le bouton : le message
+        sera mis à jour avec le nouveau résultat.</p>
     video:
       controls: true
       volume: 0.5
@@ -42,8 +74,8 @@ pages:
       coreVersion: '13.348'
       systemId: penombre
       systemVersion: '#{VERSION}#'
-      lastModifiedBy: 6qbNUhuoJ67e6dmf
-      modifiedTime: 1758729778952
+      lastModifiedBy: ZPVZnAUjZn9mQP2q
+      modifiedTime: 1759212205548
     _key: '!journal.pages!FBtmpg0lA9Y8x4CJ.NbsQ1cortQsp55q0'
   - sort: 50000
     name: Comment utiliser la fiche d'Éminence grise
@@ -132,8 +164,8 @@ pages:
         d’auteurs qui sont la propriété des éditions Æther Labs, avec l’aimable
         autorisation de Mnémos.</p><p style="text-align:center">Il est limité,
         pour l'instant, à la version kit de démo du jeu.</p><img
-        src="systems/penombre/assets/ui/logo_penombre_sur_fond_sombre_ombre_portee.webp"/><p
-        style="text-align:center">Le jeu de rôle dans les Royaumes
+        src="systems/penombre/assets/ui/logo_penombre_sur_fond_sombre_ombre_portee.webp"
+        /><p style="text-align:center">Le jeu de rôle dans les Royaumes
         crépusculaires</p><p style="text-align:center">d'après les romans de
         Mathieu Gaborit</p><blockquote><p>« On parle de vous. Vos futurs
         compagnons sont curieux et espèrent vous voir. On prétend que vous
@@ -160,8 +192,8 @@ pages:
       coreVersion: '13.348'
       systemId: penombre
       systemVersion: '#{VERSION}#'
-      lastModifiedBy: 6qbNUhuoJ67e6dmf
-      modifiedTime: 1758729864205
+      lastModifiedBy: ZPVZnAUjZn9mQP2q
+      modifiedTime: 1759211494620
     _key: '!journal.pages!FBtmpg0lA9Y8x4CJ.cZw3YYM2pYzW2CUS'
   - sort: 56250
     name: Comment gérer la réserve collégiale
