--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,3 +147,13 @@ jobs:
           artifacts: "./system.json, ./system.zip"
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
+
+      - name: Deploy Release
+        id: deploy_release
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://api.foundryvtt.com/_api/packages/release_version'
+          method: 'POST'
+          contentType: 'application/json'
+          customHeaders: '{"Authorization": "${{ secrets.FVTT_PACKAGE_RELEASE_TOKEN }}"}'
+          data: '{"id": "penombre","dry-run":false,"release":{"version":"${{github.event.release.tag_name}}","manifest":"https://github.com/AEther-Labs-Editions/foundry-penombre/releases/download/${{github.event.release.tag_name}}/system.json","notes":"https://github.com/AEther-Labs-Editions/foundry-penombre/blob/main/CHANGELOG.md","compatibility":{"minimum":"13","verified":"13","maximum":"13"}}}'          
