--- a/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
+++ b/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
@@ -66,14 +66,9 @@ pages:
         message initial sera mis à jour avec le nouveau résultat.</p><p>Là
         aussi, la réserve sollicitée sera mise à jour de façon
         automatique.</p><h2>Créer un raccourci dans la barre des
-        raccourcis</h2><p>Vous pouvez <span style="color:rgb(239, 230,
-        216);font-family:Signika, 'Palatino Linotype',
-        sans-serif;font-size:14px;font-style:normal;font-variant-ligatures:normal;font-variant-caps:normal;font-weight:400;letter-spacing:normal;orphans:2;text-align:start;text-indent:0px;text-transform:none;widows:2;word-spacing:0px;-webkit-text-stroke-width:0px;white-space:normal;background-color:rgba(11,
-        10, 19,
-        0.9);text-decoration-thickness:initial;text-decoration-style:initial;text-decoration-color:initial;display:inline
-        !important;float:none">glisser-déposer le dé d'harmonique dans la barre
-        des raccourcis pour créer un raccourci pour ce jet d'harmonique. L'image
-        du raccourci est la valeur du dé d'harmonique.</span></p>
+        raccourcis</h2><p>Vous pouvez glisser-déposer le dé d'harmonique dans la
+        barre des raccourcis pour créer un raccourci pour ce jet d'harmonique.
+        L'image du raccourci est la valeur du dé d'harmonique.</p>
     video:
       controls: true
       volume: 0.5
@@ -87,11 +82,11 @@ pages:
       compendiumSource: null
       duplicateSource: null
       exportSource: null
-      coreVersion: '13.348'
+      coreVersion: '13.350'
       systemId: penombre
       systemVersion: '#{VERSION}#'
-      lastModifiedBy: ZPVZnAUjZn9mQP2q
-      modifiedTime: 1760877166541
+      lastModifiedBy: xu8p7UMcYrInjBEg
+      modifiedTime: 1762871089562
     _key: '!journal.pages!FBtmpg0lA9Y8x4CJ.NbsQ1cortQsp55q0'
   - sort: 50000
     name: Comment utiliser la fiche d'Éminence grise
