--- a/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
+++ b/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
@@ -358,7 +358,7 @@ pages:
         <em>Pénombre</em>).</p></li><li><p>Au démarrage du combat, les Éminences
         sont placées automatiquement avant les adversaires, comme le suggèrent
         les règles.</p><img
-        src="systems/penombre/assets/guide/combat_tracker.webp"/></li></ul>
+        src="systems/penombre/assets/guide/combat_tracker.png" /></li></ul>
     video:
       controls: true
       volume: 0.5
