--- a/src/packs/kit-pretires/eminence_Ackbar_M6ted8636DNMiLp5.yml
+++ b/src/packs/kit-pretires/eminence_Ackbar_M6ted8636DNMiLp5.yml
@@ -486,14 +486,14 @@ _stats:
   compendiumSource: null
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.348'
+  coreVersion: '13.351'
   systemId: penombre
   systemVersion: '0'
   createdTime: 1757150754023
-  modifiedTime: 1759088533376
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  modifiedTime: 1765297869070
+  lastModifiedBy: xu8p7UMcYrInjBEg
 _id: M6ted8636DNMiLp5
-sort: 100000
+sort: 400000
 ownership:
   default: 0
   6qbNUhuoJ67e6dmf: 3
