--- a/src/packs/kit-pretires/eminence_Ma_tre_Mangrove_oQfBudRYF5bAOKQP.yml
+++ b/src/packs/kit-pretires/eminence_Ma_tre_Mangrove_oQfBudRYF5bAOKQP.yml
@@ -421,14 +421,14 @@ _stats:
   compendiumSource: null
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.348'
+  coreVersion: '13.351'
   systemId: penombre
   systemVersion: '0'
   createdTime: 1757150754023
-  modifiedTime: 1759088608647
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  modifiedTime: 1765297869070
+  lastModifiedBy: xu8p7UMcYrInjBEg
 _id: oQfBudRYF5bAOKQP
-sort: 400000
+sort: 700000
 ownership:
   default: 0
   6qbNUhuoJ67e6dmf: 3
