--- a/src/packs/kit-pretires/eminence_T_tras__Satyre__60ow0H8uWiCHNe7i.yml
+++ b/src/packs/kit-pretires/eminence_T_tras__Satyre__60ow0H8uWiCHNe7i.yml
@@ -1,5 +1,5 @@
 folder: null
-name: Tétras (Faune)
+name: Tétras (Satyre)
 type: eminence
 img: systems/penombre/assets/portraits/tetras.webp
 system:
@@ -155,9 +155,214 @@ prototypeToken:
   appendNumber: false
   prependAdjective: false
 items:
+  - type: atout
+    name: C’est nouveau pour moi, ça !
+    _id: DWKTJlEwebkkveyT
+    img: systems/penombre/assets/icons/atout.webp
+    system:
+      description: ''
+      valeur: 3
+    effects: []
+    folder: null
+    sort: 0
+    ownership:
+      default: 0
+      xu8p7UMcYrInjBEg: 3
+    flags: {}
+    _stats:
+      compendiumSource: null
+      duplicateSource: null
+      exportSource: null
+      coreVersion: '13.351'
+      systemId: penombre
+      systemVersion: '#{VERSION}#'
+      lastModifiedBy: null
+    _key: '!actors.items!60ow0H8uWiCHNe7i.DWKTJlEwebkkveyT'
+  - type: atout
+    name: Des cornes ? Une couronne, et autant de dagues !
+    _id: 6X2W22oziPWiUSJf
+    img: systems/penombre/assets/icons/atout.webp
+    system:
+      description: ''
+      valeur: 2
+    effects: []
+    folder: null
+    sort: 0
+    ownership:
+      default: 0
+      xu8p7UMcYrInjBEg: 3
+    flags: {}
+    _stats:
+      compendiumSource: null
+      duplicateSource: null
+      exportSource: null
+      coreVersion: '13.351'
+      systemId: penombre
+      systemVersion: '#{VERSION}#'
+      lastModifiedBy: null
+    _key: '!actors.items!60ow0H8uWiCHNe7i.6X2W22oziPWiUSJf'
+  - type: atout
+    name: Des histoires abyssales, en veux-tu ? En voilà !
+    _id: iMGlw53nklZ3Gogu
+    img: systems/penombre/assets/icons/atout.webp
+    system:
+      description: ''
+      valeur: 2
+    effects: []
+    folder: null
+    sort: 0
+    ownership:
+      default: 0
+      xu8p7UMcYrInjBEg: 3
+    flags: {}
+    _stats:
+      compendiumSource: null
+      duplicateSource: null
+      exportSource: null
+      coreVersion: '13.351'
+      systemId: penombre
+      systemVersion: '#{VERSION}#'
+      lastModifiedBy: null
+    _key: '!actors.items!60ow0H8uWiCHNe7i.iMGlw53nklZ3Gogu'
+  - type: atout
+    name: Un sang d’encre
+    _id: REzbCjigjGAMwLcE
+    img: systems/penombre/assets/icons/atout.webp
+    system:
+      description: ''
+      valeur: 2
+    effects: []
+    folder: null
+    sort: 0
+    ownership:
+      default: 0
+      xu8p7UMcYrInjBEg: 3
+    flags: {}
+    _stats:
+      compendiumSource: null
+      duplicateSource: null
+      exportSource: null
+      coreVersion: '13.351'
+      systemId: penombre
+      systemVersion: '#{VERSION}#'
+      lastModifiedBy: null
+    _key: '!actors.items!60ow0H8uWiCHNe7i.REzbCjigjGAMwLcE'
+  - type: atout
+    name: Om me dit trouble
+    _id: MMMte3eIV87dhPbx
+    img: systems/penombre/assets/icons/atout.webp
+    system:
+      description: ''
+      valeur: 1
+    effects: []
+    folder: null
+    sort: 0
+    ownership:
+      default: 0
+      xu8p7UMcYrInjBEg: 3
+    flags: {}
+    _stats:
+      compendiumSource: null
+      duplicateSource: null
+      exportSource: null
+      coreVersion: '13.351'
+      systemId: penombre
+      systemVersion: '#{VERSION}#'
+      lastModifiedBy: null
+    _key: '!actors.items!60ow0H8uWiCHNe7i.MMMte3eIV87dhPbx'
+  - type: maitrise
+    name: Geste
+    _id: tkbqDZHRR6IAlkGy
+    img: systems/penombre/assets/icons/maitrise.webp
+    system:
+      slug: ''
+      description: ''
+      harmonique: ame
+      niveau: 2
+      prerequis: se lancer dans une tirade
+    effects: []
+    folder: null
+    sort: 0
+    ownership:
+      default: 0
+      xu8p7UMcYrInjBEg: 3
+    flags: {}
+    _stats:
+      compendiumSource: null
+      duplicateSource: null
+      exportSource: null
+      coreVersion: '13.351'
+      systemId: penombre
+      systemVersion: '#{VERSION}#'
+      lastModifiedBy: null
+    _key: '!actors.items!60ow0H8uWiCHNe7i.tkbqDZHRR6IAlkGy'
+  - type: maitrise
+    name: Conjuration
+    _id: 5N4i9Yfb27Cl6Qry
+    img: systems/penombre/assets/icons/maitrise.webp
+    system:
+      slug: ''
+      description: >-
+        <p><strong>Pour préparer son effet magique, Tétras
+        doit…</strong></p><h6>Prérequis</h6><ul><li><p><strong>tracer les
+        contours d’une ombre</strong> à l’encre de son
+        sang.</p></li></ul><p><strong>Cette action le fait entrer en résonance
+        avec…</strong></p><h6>Harmonique : nuit</h6><p><strong>Ce faisant,
+        il…</strong></p><h6>Action magique</h6><ul><li><p><strong>pactise avec
+        le démon né de cette ombre.</strong> Le démon exécute la mission qui lui
+        est confiée, et le conjurateur le rémunère. La connivence qui les unit
+        doit être enregistrée auprès d’un advocatus diaboli et coûte d’autant
+        plus cher que l’effet souhaité est élevé.</p></li></ul><p><strong>Avec
+        un effet magique de niveau ? …</strong></p><p><strong>il conjure un
+        démon capable par exemple
+        de…</strong></p><ol><li><p><strong>identifier</strong> un effet magique
+        d’art noir (conjuration, omnium, prisme) ; chercher un objet ;
+        transporter une charge ou un message, y compris en volant ; faire une
+        bêtise, ou divertir ; faire peur ; mordre, griffer, piétiner ; servir de
+        réveil chaque matin ; donner une propriété nouvelle à un objet ;
+        etc.</p></li><li><p><strong>mener</strong> une enquête sommaire ; servir
+        d’escorte ou de garde ; se faire discret, se camoufler et épier ;
+        utiliser une arme ou un objet sophistiqué ;
+        etc.</p></li><li><p><strong>filer</strong> un suspect ; comprendre des
+        indices ; servir de partenaire lors d’une réception mondaine ; pratiquer
+        un art ; partager des connaissances sur un sujet précis ; se battre
+        comme un soldat ; etc.le et gagner en assurance ; prendre le contrôle
+        mental d’une bête sauvage ; etc.</p></li><li><p><strong>mener</strong>
+        une troupe ; échafauder un complot ; séduire ; pratiquer une maîtrise
+        magique, sauf la conjuration ; disposer d’un savoir unique ; usurper une
+        identité ; se battre comme un duelliste renommé ;
+        etc.</p></li><li><p><strong>exceller</strong> dans tous les domaines ;
+        conjurer de nouveaux démons ; etc.</p></li></ol><p><strong>Mais
+        attention, il risque également de…</strong></p><h6>Incident
+        magique</h6><ul><li><p><strong>laisser la porte ouverte.</strong>
+        L’ombre laisse s’échapper bien plus que le démon appelé. Cela peut
+        valoir au conjurateur une sanction de la part du Clergé obscur. Qui a
+        fui ?</p><p><strong>NOTE :</strong> Dans le tableau de difficultés des
+        effets magiques (voir p. 26), les paramètres « cible » et « distance »
+        font référence à la cible désignée au démon pour sa mission. Par
+        exemple, le démon doit agir sur un individu, un groupe, ou une foule, ou
+        infiltrer un bâtiment qui peut être proche, ou lointain.</p></li></ul>
+      harmonique: nuit
+      niveau: 1
+      prerequis: tracer le contour d’une ombre à l’encre de son sang
+    effects: []
+    folder: null
+    sort: 0
+    ownership:
+      default: 0
+      xu8p7UMcYrInjBEg: 3
+    flags: {}
+    _stats:
+      compendiumSource: null
+      duplicateSource: null
+      exportSource: null
+      coreVersion: '13.351'
+      systemId: penombre
+      systemVersion: '#{VERSION}#'
+      lastModifiedBy: null
+    _key: '!actors.items!60ow0H8uWiCHNe7i.5N4i9Yfb27Cl6Qry'
   - name: Spectacle vivant
     type: pouvoir
-    _id: nX4gy5Dx1dHloNYL
     img: systems/penombre/assets/icons/pouvoir.webp
     system:
       utilise: false
@@ -186,177 +391,11 @@ items:
       systemId: penombre
       systemVersion: '#{VERSION}#'
       lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.nX4gy5Dx1dHloNYL'
-  - type: atout
-    name: C’est nouveau pour moi, ça !
-    _id: DWKTJlEwebkkveyT
-    img: systems/penombre/assets/icons/atout.webp
-    system:
-      description: ''
-      valeur: 3
-    effects: []
-    folder: null
-    sort: 0
-    ownership:
-      default: 0
-      xu8p7UMcYrInjBEg: 3
-    flags: {}
-    _stats:
-      compendiumSource: null
-      duplicateSource: null
-      exportSource: null
-      coreVersion: '13.351'
-      systemId: penombre
-      systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.DWKTJlEwebkkveyT'
-  - type: atout
-    name: Des cornes ? Une couronne, et autant de dagues !
-    _id: 6X2W22oziPWiUSJf
-    img: systems/penombre/assets/icons/atout.webp
-    system:
-      description: ''
-      valeur: 2
-    effects: []
-    folder: null
-    sort: 0
-    ownership:
-      default: 0
-      xu8p7UMcYrInjBEg: 3
-    flags: {}
-    _stats:
-      compendiumSource: null
-      duplicateSource: null
-      exportSource: null
-      coreVersion: '13.351'
-      systemId: penombre
-      systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.6X2W22oziPWiUSJf'
-  - type: atout
-    name: Des histoires abyssales, en veux-tu ? En voilà !
-    _id: iMGlw53nklZ3Gogu
-    img: systems/penombre/assets/icons/atout.webp
-    system:
-      description: ''
-      valeur: 2
-    effects: []
-    folder: null
-    sort: 0
-    ownership:
-      default: 0
-      xu8p7UMcYrInjBEg: 3
-    flags: {}
-    _stats:
-      compendiumSource: null
-      duplicateSource: null
-      exportSource: null
-      coreVersion: '13.351'
-      systemId: penombre
-      systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.iMGlw53nklZ3Gogu'
-  - type: atout
-    name: Un sang d’encre
-    _id: REzbCjigjGAMwLcE
-    img: systems/penombre/assets/icons/atout.webp
-    system:
-      description: ''
-      valeur: 2
-    effects: []
-    folder: null
-    sort: 0
-    ownership:
-      default: 0
-      xu8p7UMcYrInjBEg: 3
-    flags: {}
-    _stats:
-      compendiumSource: null
-      duplicateSource: null
-      exportSource: null
-      coreVersion: '13.351'
-      systemId: penombre
-      systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.REzbCjigjGAMwLcE'
-  - type: atout
-    name: Om me dit trouble
-    _id: MMMte3eIV87dhPbx
-    img: systems/penombre/assets/icons/atout.webp
-    system:
-      description: ''
-      valeur: 1
-    effects: []
-    folder: null
-    sort: 0
-    ownership:
-      default: 0
-      xu8p7UMcYrInjBEg: 3
-    flags: {}
-    _stats:
-      compendiumSource: null
-      duplicateSource: null
-      exportSource: null
-      coreVersion: '13.351'
-      systemId: penombre
-      systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.MMMte3eIV87dhPbx'
-  - type: maitrise
-    name: Geste
-    _id: tkbqDZHRR6IAlkGy
-    img: systems/penombre/assets/icons/maitrise.webp
-    system:
-      slug: ''
-      description: ''
-      harmonique: ame
-      niveau: 2
-      prerequis: se lancer dans une tirade
-    effects: []
-    folder: null
-    sort: 0
-    ownership:
-      default: 0
-      xu8p7UMcYrInjBEg: 3
-    flags: {}
-    _stats:
-      compendiumSource: null
-      duplicateSource: null
-      exportSource: null
-      coreVersion: '13.351'
-      systemId: penombre
-      systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.tkbqDZHRR6IAlkGy'
-  - type: maitrise
-    name: Conjuration
-    _id: 5N4i9Yfb27Cl6Qry
-    img: systems/penombre/assets/icons/maitrise.webp
-    system:
-      slug: ''
-      description: ''
-      harmonique: nuit
-      niveau: 1
-      prerequis: tracer le contour d’une ombre à l’encre de son sang
-    effects: []
-    folder: null
-    sort: 0
-    ownership:
-      default: 0
-      xu8p7UMcYrInjBEg: 3
-    flags: {}
-    _stats:
-      compendiumSource: null
-      duplicateSource: null
-      exportSource: null
-      coreVersion: '13.351'
-      systemId: penombre
-      systemVersion: '#{VERSION}#'
-      lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.5N4i9Yfb27Cl6Qry'
+    _id: W6JqZUg9BRq4NW48
+    _key: '!actors.items!60ow0H8uWiCHNe7i.W6JqZUg9BRq4NW48'
   - type: pouvoir
     name: Bouc émissaire
-    _id: YNYJMr905wDMqgXN
+    _id: QNEctBMrinQ7QD3o
     img: systems/penombre/assets/icons/pouvoir.webp
     system:
       utilise: false
@@ -369,8 +408,8 @@ items:
         adversaires ne peut cibler que Tétras.</p>
       type: naissance
     effects: []
-    folder: null
-    sort: 0
+    folder: IxCLMJlUPYUhtQ3N
+    sort: 100000
     ownership:
       default: 0
       xu8p7UMcYrInjBEg: 3
@@ -383,10 +422,10 @@ items:
       systemId: penombre
       systemVersion: '#{VERSION}#'
       lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.YNYJMr905wDMqgXN'
+    _key: '!actors.items!60ow0H8uWiCHNe7i.QNEctBMrinQ7QD3o'
   - type: pouvoir
     name: Chevreau des abysses
-    _id: 9sxZj7doSD7YX3Cl
+    _id: fNYa63J0BKAPD1YI
     img: systems/penombre/assets/icons/pouvoir.webp
     system:
       utilise: false
@@ -397,8 +436,8 @@ items:
         automatique.</p>
       type: naissance
     effects: []
-    folder: null
-    sort: 0
+    folder: IxCLMJlUPYUhtQ3N
+    sort: 200000
     ownership:
       default: 0
       xu8p7UMcYrInjBEg: 3
@@ -411,7 +450,7 @@ items:
       systemId: penombre
       systemVersion: '#{VERSION}#'
       lastModifiedBy: null
-    _key: '!actors.items!WoxrcrXKSwI4B3Zy.9sxZj7doSD7YX3Cl'
+    _key: '!actors.items!60ow0H8uWiCHNe7i.fNYa63J0BKAPD1YI'
 effects: []
 ownership:
   default: 0
@@ -424,9 +463,9 @@ _stats:
   coreVersion: '13.351'
   systemId: penombre
   systemVersion: '#{VERSION}#'
-  createdTime: 1765297867029
-  modifiedTime: 1765297869070
+  createdTime: 1765939795249
+  modifiedTime: 1765939795292
   lastModifiedBy: xu8p7UMcYrInjBEg
-_id: WoxrcrXKSwI4B3Zy
-sort: 300000
-_key: '!actors!WoxrcrXKSwI4B3Zy'
+_id: 60ow0H8uWiCHNe7i
+sort: 200000
+_key: '!actors!60ow0H8uWiCHNe7i'
